src/test/ui/const-generics/issues/issue-56445.full.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-56445.rs:3:27
   |
LL | #![cfg_attr(full, feature(const_generics))]
   |                           ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: consider using `min_const_generics` instead, which is more stable and complete

error[E0771]: use of non-static lifetime `'a` in const generic
  --> $DIR/issue-56445.rs:9:26
   |
LL | struct Bug<'a, const S: &'a str>(PhantomData<&'a ()>);
   |                          ^^
   |
   = note: for more information, see issue #74052 <https://github.com/rust-lang/rust/issues/74052>

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0771`.
